--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     
     <nav>
         <ul class="link">
-            <li>Home</li>
-            <li>Download</li>
-            <li>About</li>
-            <li>Community</li>           
-            <li>Sponsors</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Download</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Community</a></li>
+            <li><a href="#">Sponsors</a></li>
             </ul>
     </nav>
 
     <nav>
         <ol class="top">
-            <li>wiki</li>
-            <li>git</li>
-            <li>bugs</li>
-            <li>packages</li>           
-            <li>mirrors</li>
+                <li><a href="#">wiki</a></li>
+                <li><a href="#">git</a></li>
+                <li><a href="#">bugs</a></li>
+                <li><a href="#">packages</a></li>
+                <li><a href="#">mirrors</a></li>
             </ol>
     </nav>
 </header>
